welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:9: error: not found: value Direction
  if (getDirection()!=Direction.EST){
                      ^DwarfCode:16: error: not found: value Direction
  if(getDirection()!=Direction.Ouest){
                     ^DwarfCode:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^DwarfCode:38: warning: enclosing method positionFinale has result type Unit: return value discarded
    return true
    ^DwarfCode:40: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^DwarfCode:40: warning: enclosing method positionFinale has result type Unit: return value discarded
  return false
  ^